--- a/generic_datasource_client/src/main/webapp/index.html
+++ b/generic_datasource_client/src/main/webapp/index.html
@@ -6,7 +6,7 @@
     </head>
     <body>
       <script language="javascript" type="text/javascript">
-       window.location.href="business_summary.html";
+       window.location.href="business_gallery.html";
       </script>
     </body>
 </html>
