--- a/generic_datasource_client/src/main/webapp/login.html
+++ b/generic_datasource_client/src/main/webapp/login.html
@@ -6,7 +6,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Matrix</title>
+  <title>Matrix Data Source</title>
 
   <link rel="shortcut icon" href="assets/self-owned/ico/favicon.ico">
 
@@ -30,7 +30,7 @@
         <div class="row">
           <div class="col-sm-8 col-sm-offset-2 text">
             <h1>
-              <strong><b><span style="color: #3498db;">MATRIX</span></b> Security Portal</strong>
+              <strong><b><span style="color: #3498db;">MATRIX</span></b> Data Source</strong>
             </h1>
 
           </div>
