insert_datasource模块中获取datasource list增加“通过审核”的过滤条件

--- a/generic_report_client/src/main/webapp/assets/self-owned/html/report/modal_content_insert_datasource.html
+++ b/generic_report_client/src/main/webapp/assets/self-owned/html/report/modal_content_insert_datasource.html
@@ -68,6 +68,8 @@
             "eqMap": {
                 "type": "SCRIPTER_KAGGLE_DATASET",
                 "booleanbeta": true,
+                "booleandelta": true,
+                "booleangamma": true,
                 "deleted": false
             },
             "inMap": {},
